# indra-api

./: .gitignore
account/: Cargo.toml
account/examples/: test-run.rs
account/src/: endpoint.rs  lib.rs  users.rs
api_acc/: .env  Cargo.toml
api_acc/examples/: test-run.rs
api_acc/src/: api_account.rs  lib.rs
branch/: Cargo.toml
branch/examples/: test-run.rs
branch/src/: operation.rs
database/: Cargo.toml
database/examples/: test.rs
database/migrations/2020-11-15-045905_create_user/: down.sql  up.sql
database/migrations/2020-11-15-072907_test_db/: up.sql
database/migrations/2020-11-20-151445_status/: up.sql
database/migrations/2020-11-23-064703_api_acc/: up.sql
database/migrations/2020-11-23-073155_branch/: up.sql
database/migrations/2020-11-25-055348_documents/: up.sql
database/migrations/2020-11-25-062718_document_type/: up.sql
database/migrations/2020-11-25-065922_hashval/: up.sql
database/migrations/2020-11-25-074857_merchant/: up.sql
database/migrations/2020-11-25-082432_trx_archive/: up.sql
database/migrations/2020-11-26-071545_receipts/: up.sql
database/src/: db_connection.rs  function.rs  lib.rs  schema.rs  test_db.rs
db/: Cargo.toml
db/src/: lib.rs  main.rs  storage.rs
document/: Cargo.toml
document/examples/: test-run.rs
document/src/: operation.rs
document_type/: Cargo.toml
document_type/examples/: test-run.rs
document_type/src/: lib.rs  operation.rs
encryption/: Cargo.toml
encryption/src/: lib.rs  mnemonic.rs
hashval/: Cargo.toml
hashval/examples/: test-run.rs
hashval/src/: lib.rs  operation.rs
merchant/: Cargo.toml
merchant/src/: operation.rs
receipt/: Cargo.toml
receipt/src/: operation.rs
status/: Cargo.toml
status/examples/: test.rs
status/src/: operation.rs
trx-archive/: Cargo.toml
trx-archive/examples/: test-run.rs
trx-archive/src/: operation.rs
