[package]
name = "api_acc"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }