[package]
name = "db"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbreak = { version = "2.0.0-rc3", features=["bin_enc"] }
dirs = "2.0"

[dependencies.subwallet]
package = "subwallet"
path = "/home/shing/Documents/blockchain/subwallet"
default-features = false
