[package]
name = "encryption"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "^0.3"
dotenv = "0.15.0"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1"